update issue page font for mobile, fix full screen what close animation, fix submit button on firefox, set inset 0 to see if mobile button fixed

--- a/src/components/Button/button.module.scss
+++ b/src/components/Button/button.module.scss
@@ -11,6 +11,7 @@
 }
 
 .button {
+  inset: 0;
   text-align: center;
   border: solid 1px $white-primary;
   padding: 14px 16px 8px;
